--- a/flowerdelivery/templates/analytics/analytics.html
+++ b/flowerdelivery/templates/analytics/analytics.html
@@ -4,5 +4,13 @@
 
 {% block content %}
 <h2>Аналитика</h2>
-<p>Здесь будут представлены данные по продажам и заказам.</p>
+<p>Данные о продажах и заказах:</p>
+
+<ul>
+    <li>Общее количество заказов: 256</li>
+    <li>Общая прибыль: 150,000 руб.</li>
+    <li>Средняя стоимость заказа: 1,500 руб.</li>
+</ul>
+
+<p>Графики и диаграммы можно добавить сюда.</p>
 {% endblock %}
