--- a/flowerdelivery/templates/flower_orders/order_list.html
+++ b/flowerdelivery/templates/flower_orders/order_list.html
@@ -4,5 +4,10 @@
 
 {% block content %}
 <h2>Мои заказы</h2>
-<p>Здесь будут отображены ваши заказы.</p>
+<p>Здесь отображаются все ваши текущие и предыдущие заказы:</p>
+
+<ul>
+    <li>Заказ №1234 - 3 розы - 1500 руб. - Доставлено</li>
+    <li>Заказ №1235 - 5 тюльпанов - 1500 руб. - В обработке</li>
+</ul>
 {% endblock %}
