--- a/flowerdelivery/templates/reviews/review_list.html
+++ b/flowerdelivery/templates/reviews/review_list.html
@@ -4,6 +4,14 @@
 
 {% block content %}
 <h2>Отзывы</h2>
-<p>Здесь вы можете прочитать отзывы пользователей.</p>
+<p>Здесь вы можете прочитать отзывы о нашем сервисе:</p>
+
+<ul>
+    <li>Анна: Отличный сервис, цветы были свежие и вовремя доставлены!</li>
+    <li>Игорь: Доволен качеством доставки, обязательно закажу снова!</li>
+</ul>
+
+<p><a href="#" class="nav-button">Оставить отзыв</a></p>
 {% endblock %}
+
 
