--- a/flowerdelivery/templates/shop/index.html
+++ b/flowerdelivery/templates/shop/index.html
@@ -1,10 +1,21 @@
 {% extends 'base.html' %}
 
-{% block title %}Главная{% endblock %}
+{% block title %}Добро пожаловать{% endblock %}
 
 {% block content %}
 <h2>Добро пожаловать в FlowerDelivery!</h2>
-<p>Выберите один из разделов ниже:</p>
+
+<p>Зарегистрируйтесь, чтобы сделать заказ:</p>
+
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <div>
+        <input type="checkbox" name="remember_me" id="remember_me">
+        <label for="remember_me">Запомнить меня</label>
+    </div>
+    <button type="submit">Зарегистрироваться</button>
+</form>
 
 <div class="navigation">
     <a href="/shop/" class="nav-button">Каталог цветов</a>
