--- a/flowerdelivery/templates/flower_orders/order_list.html
+++ b/flowerdelivery/templates/flower_orders/order_list.html
@@ -1,5 +1,17 @@
 {% extends 'base.html' %}
 
+.logo-container {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.logo-container img {
+    width: 150px; /* Размер логотипа */
+    height: auto;
+}
+
+
 {% block title %}Мои заказы{% endblock %}
 
 {% block content %}
