--- a/flowerdelivery/templates/shop/catalog.html
+++ b/flowerdelivery/templates/shop/catalog.html
@@ -1,4 +1,16 @@
 {% extends 'base.html' %}
+{% load static %}
+.logo-container {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.logo-container img {
+    width: 150px; /* Размер логотипа */
+    height: auto;
+}
+
 
 {% block title %}Каталог цветов{% endblock %}
 
