--- a/flowerdelivery/templates/users/register.html
+++ b/flowerdelivery/templates/users/register.html
@@ -2,6 +2,18 @@
 
 {% block title %}Регистрация{% endblock %}
 
+.logo-container {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.logo-container img {
+    width: 150px; /* Размер логотипа */
+    height: auto;
+}
+
+
 {% block content %}
 <h2>Регистрация</h2>
 
