--- a/flowerdelivery/templates/base.html
+++ b/flowerdelivery/templates/base.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}FlowerDelivery{% endblock %}</title>
-
-    {% load static %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
+
 </head>
 <body>
     <header>
+         <div class="logo-container">
+        <img src="{% static 'images/mashaneuro9_create_a_logo_for_a_flower_store._It_should_be_brig_89310505-0175-4282-b98c-600b4e390c0f.png' %}" alt="Flower Delivery Logo">
+    </div>
         <h1>FlowerDelivery</h1>
         <nav>
             <a href="/">Главная</a>
@@ -38,5 +42,6 @@
     <footer>
         <p>&copy; 2024 FlowerDelivery. Все права защищены.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
