--- a/flowerdelivery/templates/shop/home.html
+++ b/flowerdelivery/templates/shop/home.html
@@ -1,10 +1,57 @@
 <!-- templates/shop/home.html -->
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Главная страница{% endblock %}
 
 {% block content %}
+<div id="flowerCarousel" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="{% static 'images/527-file-58e60d72d3af5.jpg' %}" class="d-block w-100" alt="Слайд 1">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'images/696416_1676242145_3a7303bc-33d8-4f50-b4e8-f90b2da6d4ad.jpg' %}" class="d-block w-100" alt="Слайд 2">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'images/-cvetok-cvety-flora-roza.jpg' %}" class="d-block w-100" alt="Слайд 3">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'images/Bouquets_Roses_White_background_512815_2048x2732.jpg' %}" class="d-block w-100" alt="Слайд 4">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#flowerCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#flowerCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
 <h2>Добро пожаловать в FlowerDelivery!</h2>
+
+{% if messages %}
+  <div class="messages">
+    {% for message in messages %}
+      <div class="alert alert-success">{{ message }}</div>
+    {% endfor %}
+  </div>
+{% endif %}
+
+<p>Зарегистрируйтесь, чтобы сделать заказ:</p>
+
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <div>
+        <input type="checkbox" name="remember_me" id="remember_me">
+        <label for="remember_me">Запомнить меня</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+</form>
+
 <p>Выберите цветы из нашего каталога для заказа.</p>
-<a href="{% url 'flower_list' %}">Перейти в каталог</a>
+<a href="{% url 'flower_list' %}" class="btn btn-secondary">Перейти в каталог</a>
 {% endblock %}
