--- a/flowerdelivery/templates/users/register.html
+++ b/flowerdelivery/templates/users/register.html
@@ -1,30 +1,6 @@
-{% extends 'base.html' %}
-
-{% block title %}Регистрация{% endblock %}
-
-.logo-container {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-}
-
-.logo-container img {
-    width: 150px; /* Размер логотипа */
-    height: auto;
-}
-
-
-{% block content %}
-<h2>Регистрация</h2>
-
+<h2>Зарегистрируйтесь</h2>
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <div>
-        <input type="checkbox" name="remember_me" id="remember_me">
-        <label for="remember_me">Запомнить меня</label>
-    </div>
-    <button type="submit">Зарегистрироваться</button>
+    <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
 </form>
-
-{% endblock %}
