--- a/flowerdelivery/shop/templates/shop/home.html
+++ b/flowerdelivery/shop/templates/shop/home.html
@@ -44,4 +44,8 @@
 
 <p>Выберите цветы из нашего каталога для заказа.</p>
 <a href="{% url 'flower_list' %}" class="btn btn-secondary">Перейти в каталог</a>
+
+<!-- Добавляем кнопку для регистрации через HTML-форму -->
+<a href="{% url 'register' %}" class="btn btn-primary">Регистрация</a>
+
 {% endblock %}
