--- a/flowerdelivery/users/templates/users/register.html
+++ b/flowerdelivery/users/templates/users/register.html
@@ -1,6 +1,17 @@
-<h2>Зарегистрируйтесь</h2>
-<form method="POST">
-
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
-</form>
+<!-- users/templates/users/register.html -->
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Регистрация</title>
+</head>
+<body>
+    <h1>Регистрация</h1>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Зарегистрироваться</button>
+    </form>
+</body>
+</html>
